I may have misunderstood the purpose of an uncaught exception handler...